fix image type details alignment

--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -619,7 +619,6 @@ body .select2-selection--single.select2-selection--single {
     width: 100%;
     height: 450px;
     background: #000;
-    border-radius: 1rem;
     overflow: hidden;
 }
 
